# healthgrid-hce-backend

./: .gitignore  README.md  export_docs.py  openapi.json  package-lock.json  pyproject.toml  redoc_docs.html  swagger_docs.html
alembic/: env.py
alembic/versions/: 1f275ca4e1c9_add_motivo_to_sala_espera.py  21dfc32a23ac_rename_cobertura_medica_fields.py  441cec87cd4a_add_receta_fecha_creacion_and_orden_.py  681de181a35e_add_ficha_medica.py  823f6749764a_make_id_episodio_nullable.py  832b83174685_add_tipo_atencion_and_id_medico_triage_.py  9c776f8fac73_refactor_recetas_items.py  cd48075b2956_add_orders_and_results_extensions.py  e4ba5d50f533_add_finalizado_to_estado_sala_espera.py  efc70817c09e_add_details_to_ordenes.py
app/: config.py  database.py  dependencies.py  main.py
app/auth/: jwks.py  jwt_handler.py
app/integrations/: core_bus.py  core_client.py  m2_client.py  m4_client.py  m5_client.py  rabbit_consumer.py
docs/: Consigna.md  SSO_INTEGRATION_GUIDE.md  backend_env_variables.md  backend_integration_todo.md  comunicacion-tutorial.md  deployment_guide.md  frontend_integration_guide.md  integration_m5.md
hce-backend/: .gitignore  ARQUITECTURA_GENERAL.md  ARQUITECTURA_M1.md  INTEGRACIONES_M1.md  README_LOCAL.md  alembic.ini  api_context.md  cambios_respecto_companero.md  docker-compose.yml  requirements.txt
scripts/: setup_core_bus.py
tests/: conftest.py  test_ficha_medica.py  test_gateway_validation.py  test_nomenclador.py  test_ordenes_resultados.py  test_patient_sync.py  test_recetas.py  test_sala_espera.py  test_unificacion_integraciones.py
(+164 files in other folders)
